--- a/package.json
+++ b/package.json
@@ -13,32 +13,13 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
-    "babel-runtime": "^6.18.0",
     "bcrypt": "^0.8.7",
-    "bootstrap": "^3.3.7",
-    "faker": "^3.1.0",
-    "meteor-node-stubs": "~0.2.0",
+    "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
-    "object-sizeof": "^1.1.1",
-    "prop-types": "^15.6.0",
-    "react-ace": "^3.5.0",
-    "react-addons-pure-render-mixin": "^15.3.1",
-    "react-js-pagination": "^2.0.0",
-    "react-json-pretty": "^1.2.1",
-    "react-mounter": "^1.2.0",
-    "sift": "^3.2.6",
     "simpl-schema": "^0.2.2"
   },
   "devDependencies": {
     "buffer": "^5.0.8",
-    "chai": "^4.1.2",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-15": "^1.0.5",
-    "jest": "^21.2.1",
-    "phantomjs-prebuilt": "^2.1.15",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-unit": "^3.0.2",
-    "sinon": "^4.1.2"
+    "phantomjs-prebuilt": "^2.1.15"
   }
 }
