--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/runtime": "^7.7.6",
     "bcrypt": "^0.8.7",
+    "corejs-typeahead": "^1.3.0",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "simpl-schema": "^0.2.2"
