--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "corejs-typeahead": "^1.3.0",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
+    "ramda": "^0.27.0",
     "simpl-schema": "^0.2.2"
   },
   "devDependencies": {
