--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
     "bcrypt": "^0.8.7",
     "corejs-typeahead": "^1.3.0",
+    "flatpickr": "^4.6.3",
+    "geocomplete": "^1.7.0",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "ramda": "^0.27.0",
