--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mailgun-js": "^0.22.0",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
+    "qr-image": "^3.2.0",
     "ramda": "^0.27.0",
     "simpl-schema": "^0.2.2"
   },
